--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,5 +14,7 @@
         {{> messages}}
         {{{body}}}
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
